[package]
name = "discord_bot_by_hellsing"
version = "0.1.0"
authors = ["hellsing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity            = "0.10"
tokio               = { version = "1.2.0", features = ["full"] }
rand                = "0.8"
